Version 4.45 - 17 March 2013, by Per Øyvind Karlsen

- add URPM::traverse_tag_find() for urpme --env
- fix computing size of added/freed disk space when updating involves removing
  some packages (mga#4427)
- support kernel 3.x in kmod resolution

Version 4.44 - 16 March 2013, by Per Øyvind Karlsen

- disable rpmlint for building test package during regression tests
- move out some functions accessing berkeley db API directly into a RPMBDB
  module built together with rpm in order to really guard ourself from
  breakages during new major berkeley db version upgrades
- don't disable strict aliasing

Version 4.43 -  9 June 2012, by Per Øyvind Karlsen

- add a simple detectXZ() function for reading the magic ourself in situations
  where we ie. cannot rely on ie. libmagic

Version 4.42 - 16 May 2012, by Per Øyvind Karlsen

- make URPM::DB::info use berkeley db api rather than using rpmdb functions
  that's not part of the public api, thus making things less fragile
- fix building with rpm >= 5.4.9 where BDB data types are hidden

Version 4.41 - 12 April 2012, by Per Øyvind Karlsen

- revert change in previous version, it resulted in unsupported rpms being
  installed, better to properly handle this conversion in rpm itself now.

Version 4.40 - 29 March 2012, by Per Øyvind Karlsen

- handle rpms using old format with missing version, which would result in
  crash with ie. Oracle Java rpm package (#65443)

Version 4.39 -  7 March 2012, by Per Øyvind Karlsen

- link against berkeley db as we're accessing it's API directly
- workaround fts.h incompatibility with _FILE_OFFSET_BITS=64 to fix build with
  perl 5.14.2 (from Bernhard Rosenkraenzer)
- ~fix filesize computation
- add support for bzip2 compressed synthesis (by using Fopen() from rpmio)
- export rpmtag_from_string()

Version 4.38 - 19 October 2011, by Per Øyvind Karlsen

- fix api breakage with rpm 5.4

Version 4.37 - 24 July 2011, by Per Øyvind Karlsen
